src/poi/deploy/poi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: tripinsights-api
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrypvp6623.azurecr.io/tripinsights/poi:1.0
        ports:
          - containerPort: 8080
            name: http
          - containerPort: 443
            name: https
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
      serviceAccountName: apidev
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "trip-insigsts-key-vault"
