src/poi/deploy/poi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: tripinsights-api
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: poi
