src/poi/deploy/poi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi-ingress
  namespace: tripinsights-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 8080
      - path: /api/docs/poi
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 8080
      - path: /swagger/docs/poi 
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 8080
